--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Fragment Chats"
+        android:text="@string/fragment_chats"
         android:textSize="30sp"
         android:textStyle="bold"/>
 
