--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Fragment Status"
+        android:text="@string/fragment_status"
         android:textSize="30sp"
         android:textStyle="bold"/>
 
